--- a/gmall-wms/src/main/resources/application.yml
+++ b/gmall-wms/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     url: jdbc:mysql://localhost:3306/shop_wms?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8
     username: root
-    password:
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
     host: 127.0.0.1
