--- a/gmall-oms/pom.xml
+++ b/gmall-oms/pom.xml
@@ -46,5 +46,9 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-amqp</artifactId>
     </dependency>
+    <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>druid</artifactId>
+    </dependency>
 </dependencies>
 </project>
