--- a/gmall-sms/src/main/resources/file.conf
+++ b/gmall-sms/src/main/resources/file.conf
@@ -30,7 +30,7 @@ transport {
 }
 service {
   #transaction service group mapping
-  vgroupMapping.pms-service_group = "default"
+  vgroupMapping.sms-service_group = "default"
   #only support when registry.type=file, please don't set multiple addresses
   default.grouplist = "127.0.0.1:8091"
   #degrade, current not support
