--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>gmall-wms</module>
         <module>gmall-model</module>
         <module>gmall-gataway</module>
+        <module>gmall-search</module>
     </modules>
 
     <properties>
@@ -44,6 +45,11 @@
         <jjwt-api.version>0.10.7</jjwt-api.version>
         <spring-boot.version>2.2.1.RELEASE</spring-boot.version>
         <oss.version>3.5.0</oss.version>
+        <elasticsearch.version>2.4.0</elasticsearch.version>
+        <amqp.version>2.4.0</amqp.version>
+        <hystrix.version>2.2.5.RELEASE</hystrix.version>
+        <openfeign.version>2.2.5.RELEASE</openfeign.version>
+        <gson.version>2.8.6</gson.version>
     </properties>
 
     <dependencyManagement>
@@ -173,6 +179,31 @@
                 <groupId>com.aliyun.oss</groupId>
                 <artifactId>aliyun-sdk-oss</artifactId>
                 <version>${oss.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-amqp</artifactId>
+                <version>${amqp.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+                <version>${elasticsearch.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+                <version>${hystrix.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
+                <version>${openfeign.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
