--- a/gmall-sms/src/main/resources/registry.conf
+++ b/gmall-sms/src/main/resources/registry.conf
@@ -6,10 +6,11 @@ registry {
     application = "seata-server"
     serverAddr = "localhost:8848"
     namespace = "public"
+    cluster = "default"
     username = "nacos"
     password = "nacos"
   }
-
+}
 config {
   # file、nacos 、apollo、zk、consul、etcd3、springCloudConfig
   type = "file"
