--- a/gmall-search/src/main/resources/application.yml
+++ b/gmall-search/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 server:
-  port: 8081
+  port: 8086
 spring:
   cloud:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+  elasticsearch:
+    rest:
+      uris: 192.168.160.133:9200
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     url: jdbc:mysql://localhost:3306/shop_pms?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8
