--- a/gmall-pms/src/main/resources/registry.conf
+++ b/gmall-pms/src/main/resources/registry.conf
@@ -1,22 +1,19 @@
 registry {
-  # file 、nacos 、eureka、redis、zk、consul、etcd3、sofa
-  type = "file"
+  # file 、nacos 、eureka、redis、zk
+  type = "nacos"
 
   nacos {
-    application = "seata-server"
     serverAddr = "localhost:8848"
     namespace = "public"
     cluster = "default"
-    username = "nacos"
-    password = "nacos"
   }
 }
+
 config {
-  # file、nacos 、apollo、zk、consul、etcd3、springCloudConfig
-  type = "file"
+     # file、nacos 、apollo、zk
+     type = "file"
 
-
-  file {
-    name = "file.conf"
-  }
+     file {
+       name = "file.conf"
+     }
 }
