--- a/gmall-search/src/main/resources/application.yml
+++ b/gmall-search/src/main/resources/application.yml
@@ -8,21 +8,5 @@ spring:
   elasticsearch:
     rest:
       uris: 192.168.160.133:9200
-  datasource:
-    type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
-    url: jdbc:mysql://localhost:3306/shop_pms?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8
-    username: root
-    password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  redis:
-    host: 127.0.0.1
-    port: 6379
-mybatis-plus:
-  configuration:
-    map-underscore-to-camel-case: true
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-    cache-enabled: false
-  mapper-locations: classpath:mapper/pms/**/*.xml
-  global-config:
-    db-config:
-      id-type: auto
+  jackson:
+    default-property-inclusion: non_null #如果json反序列化数据为null时不会反序列化
