--- a/gmall-search/src/main/resources/bootstrap.yml
+++ b/gmall-search/src/main/resources/bootstrap.yml
@@ -1,10 +1,10 @@
 spring:
   application:
-    name: pms-service
+    name: search-service
   cloud:
     nacos:
       config:
         server-addr: 127.0.0.1:8848
-        namespace: 70919e3f-3666-479b-9d6c-4663f3d21534
+        #namespace: 70919e3f-3666-479b-9d6c-4663f3d21534
         group: dev
         file-extension: yml #默认bootstrap后缀名是properties需要指定为yml
