--- a/gmall-pms/src/main/resources/application.yml
+++ b/gmall-pms/src/main/resources/application.yml
@@ -1,25 +1,32 @@
-server:
-  port: 8081
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 127.0.0.1:8848
-  datasource:
-    type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
-    url: jdbc:mysql://localhost:3306/shop_pms?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8
-    username: root
-    password: 123456
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  redis:
+  application:
+    name: pms-service
+  rabbitmq:
     host: 127.0.0.1
-    port: 6379
-mybatis-plus:
-  configuration:
-    map-underscore-to-camel-case: true
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-    cache-enabled: false
-  mapper-locations: classpath:mapper/pms/**/*.xml
-  global-config:
-    db-config:
-      id-type: auto
+    port: 5672
+    virtual-host: /xiaoxiong
+    username: xiaoxiong
+    password: xiaoxiong
+item:
+  rabbitmq:
+    exchange: PMS-EXCHAGE #自定义交换机名称
+seata:
+  config:
+    type: nacos
+    nacos:
+      server-addr: 127.0.0.1:8848
+      group : "SEATA_GROUP"
+      namespace: ""
+      username: "nacos"
+      password: "nacos"
+  registry:
+    type: nacos
+    nacos:
+      application: seata-server
+      server-addr: 127.0.0.1:8848
+      group : "SEATA_GROUP"
+      namespace: ""
+      username: "nacos"
+      password: "nacos"
+      cluster: "default"
+  tx-service-group: pms-service-group
