--- a/gmall-search/src/main/resources/application.yml
+++ b/gmall-search/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 8086
 spring:
+  application:
+    name: search-service
   cloud:
     nacos:
       discovery:
@@ -8,21 +10,9 @@ spring:
   elasticsearch:
     rest:
       uris: 192.168.160.133:9200
-  datasource:
-    type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
-    url: jdbc:mysql://localhost:3306/shop_pms?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8
-    username: root
-    password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  redis:
+  rabbitmq:
+    password: xiaoxiong
+    username: xiaoxiong
     host: 127.0.0.1
-    port: 6379
-mybatis-plus:
-  configuration:
-    map-underscore-to-camel-case: true
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-    cache-enabled: false
-  mapper-locations: classpath:mapper/pms/**/*.xml
-  global-config:
-    db-config:
-      id-type: auto
+    port: 5672
+    virtual-host: /xiaoxiong
