--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>gmall-model</module>
         <module>gmall-gataway</module>
         <module>gmall-search</module>
+        <module>gmall-index</module>
     </modules>
 
     <properties>
@@ -36,10 +37,10 @@
         <hutool.version>4.1.1</hutool.version>
         <fastjson.version>1.2.47</fastjson.version>
         <nacos.version>0.2.2.RELEASE</nacos.version>
+        <nacos.client.version>1.3.2</nacos.client.version>
         <commons.lang.version>2.6</commons.lang.version>
         <commons.io.version>2.5</commons.io.version>
-        <seate.version>2.0.0.RELEASE</seate.version>
-        <seate.all.version>0.9.0</seate.all.version>
+        <seate.version>1.4.1</seate.version>
         <joda-time.version>2.10.5</joda-time.version>
         <tomcat-embed-core.version>9.0.29</tomcat-embed-core.version>
         <jjwt-api.version>0.10.7</jjwt-api.version>
@@ -126,9 +127,9 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>${mybatisplus.version}</version>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatisplus.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
@@ -166,14 +167,9 @@
                 <version>${commons.io.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-alibaba-seata</artifactId>
-                <version>${seate.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>io.seata</groupId>
-                <artifactId>seata-all</artifactId>
-                <version>${seate.all.version}</version>
+                <artifactId>seata-spring-boot-starter</artifactId>
+                <version>${seate.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.aliyun.oss</groupId>
@@ -204,6 +200,11 @@
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>${gson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.nacos</groupId>
+                <artifactId>nacos-client</artifactId>
+                <version>${nacos.client.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
