--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
         <hystrix.version>2.2.5.RELEASE</hystrix.version>
         <openfeign.version>2.2.5.RELEASE</openfeign.version>
         <gson.version>2.8.6</gson.version>
+        <redisson.version>3.11.6</redisson.version>
     </properties>
 
     <dependencyManagement>
@@ -205,6 +206,11 @@
                 <groupId>com.alibaba.nacos</groupId>
                 <artifactId>nacos-client</artifactId>
                 <version>${nacos.client.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>${redisson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
