新建订单，购物车，详情模块，并根据skuId查询海报信息

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
         <module>gmall-gataway</module>
         <module>gmall-search</module>
         <module>gmall-index</module>
+        <module>gmall-item</module>
+        <module>gmall-cart</module>
+        <module>gmall-auth</module>
+        <module>gmall-order</module>
     </modules>
 
     <properties>
