--- a/gmall-cart/pom.xml
+++ b/gmall-cart/pom.xml
@@ -16,4 +16,21 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.study</groupId>
+            <artifactId>gmall-model</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                    <exclusion>
+                        <groupId>com.baomidou</groupId>
+                        <artifactId>mybatis-plus-boot-starter</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.baomidou</groupId>
+                        <artifactId>mybatis-plus</artifactId>
+                    </exclusion>
+            </exclusions>
+        </dependency>
+    </dependencies>
 </project>
