--- a/gmall-gataway/src/main/resources/application.yml
+++ b/gmall-gataway/src/main/resources/application.yml
@@ -40,6 +40,13 @@ spring:
             - Path=/api/order/**
           filters:
             - RewritePath=/api(?<segment>/?.*), $\{segment}
+            - Auth             #使用的是AuthGatewayFilter访问index时进行拦截token验证
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+
+#网关获取到token之后请求订单等微服务
+gmall:
+  jwt:
+    pubKeyPath: D:\\Program Files\\ideaworkspaces\\glshop\\rsa.pub # 公钥地址
+    cookieName: GMALL_TOKEN
