--- a/gmall-cart/pom.xml
+++ b/gmall-cart/pom.xml
@@ -32,5 +32,9 @@
                     </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
 </project>
