--- a/gmall-oms/src/main/resources/application.yml
+++ b/gmall-oms/src/main/resources/application.yml
@@ -14,6 +14,11 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
+  rabbitmq:
+    host: 192.168.160.133
+    virtual-host: /xiaoxiong
+    username: xiaoxiong
+    password: xiaoxiong
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
