使用沙箱环境进行支付

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <openfeign.version>2.2.5.RELEASE</openfeign.version>
         <gson.version>2.8.6</gson.version>
         <redisson.version>3.11.6</redisson.version>
+        <alipay.version>4.8.10.ALL</alipay.version>
     </properties>
 
     <dependencyManagement>
@@ -215,6 +216,11 @@
                 <groupId>org.redisson</groupId>
                 <artifactId>redisson</artifactId>
                 <version>${redisson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alipay.sdk</groupId>
+                <artifactId>alipay-sdk-java</artifactId>
+                <version>${alipay.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
